--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Blog</title>
+    <link rel="stylesheet" type="text/css" href="./assets/css/app.css"/>
 </head>
 <body>
     <header id="cabecera">
@@ -16,14 +17,15 @@
         <nav id="menu">
            <ul>
                 <li><a href="index.php">Inicio</a></li>
-                <li><a href=""></a>Categoria 1</li>
-                <li><a href=""></a>Categoria 2</li>
-                <li><a href=""></a>Categoria 3</li>
-                <li><a href=""></a>Categoria 4</li>
-                <li><a href=""></a>Sobre mí</li>
-                <li><a href=""></a>Contacto</li>
+                <li><a href="">Categoria 1</a></li>
+                <li><a href="">Categoria 2</a></li>
+                <li><a href="">Categoria 3</a></li>
+                <li><a href="">Categoria 4</a></li>
+                <li><a href="">Sobre mí</a></li>
+                <li><a href="">Contacto</a></li>
            </ul> 
         </nav>
+        <div class="clearfix"></div>
     </header>
     <div id="contenedor">
         <aside id="sidebar">
@@ -61,19 +63,29 @@
         </aside>
         <div id="principal">
             <h1>Ultimas entradas</h1>
-            <article class="entrada">
-                <h2>Titulo de mi entrada</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati totam quos sequi sit reprehenderit ipsa debitis aliquid laudantium possimus, vitae esse placeat mollitia ipsam consectetur voluptatibus dolor, pariatur corporis quisquam?</p>
-            </article>
-            <article class="entrada">
-                <h2>Titulo de mi entrada</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati totam quos sequi sit reprehenderit ipsa debitis aliquid laudantium possimus, vitae esse placeat mollitia ipsam consectetur voluptatibus dolor, pariatur corporis quisquam?</p>
-            </article>
-            <article class="entrada">
-                <h2>Titulo de mi entrada</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati totam quos sequi sit reprehenderit ipsa debitis aliquid laudantium possimus, vitae esse placeat mollitia ipsam consectetur voluptatibus dolor, pariatur corporis quisquam?</p>
-            </article>
+            <a href="">
+                <article class="entrada">
+                    <h2>Titulo de mi entrada</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati totam quos sequi sit reprehenderit ipsa debitis aliquid laudantium possimus, vitae esse placeat mollitia ipsam consectetur voluptatibus dolor, pariatur corporis quisquam?</p>
+                </article>
+            </a>
+            <a href="">
+                <article class="entrada">
+                    <h2>Titulo de mi entrada</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati totam quos sequi sit reprehenderit ipsa debitis aliquid laudantium possimus, vitae esse placeat mollitia ipsam consectetur voluptatibus dolor, pariatur corporis quisquam?</p>
+                </article>
+            </a>
+            <a href="">
+                <article class="entrada">
+                    <h2>Titulo de mi entrada</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati totam quos sequi sit reprehenderit ipsa debitis aliquid laudantium possimus, vitae esse placeat mollitia ipsam consectetur voluptatibus dolor, pariatur corporis quisquam?</p>
+                </article>
+            </a>
+            <div id="verTodas">
+                <a href="">Ver todas las entradas</a>
+            </div>
         </div>
+        <div class="clerfix"></div>
     </div>
     <footer id="pie">
         <p>Developed by n3T6i &copy; 2018</p>
